posts: Convert to class based views.

--- a/server/posts/templates/posts/detail.html
+++ b/server/posts/templates/posts/detail.html
@@ -1,5 +1,11 @@
 <h1>{{ post.display_title }}</h1>
 
 <div>
+  <a href="{% url 'posts:index' %}">
+    Back to posts
+  </a>
+</div>
+
+<div>
   {{ post.content |safe }}
 </div>
