--- a/server/pages/templates/pages/posts/detail.html
+++ b/server/pages/templates/pages/posts/detail.html
@@ -1,7 +1,7 @@
 <h1>{{ post.display_title }}</h1>
 
 <div>
-  <a href="{% url 'posts:index' %}">
+  <a href="{% url 'pages:posts' %}">
     Back to posts
   </a>
 </div>
