--- a/server/pages/templates/pages/posts/index.html
+++ b/server/pages/templates/pages/posts/index.html
@@ -10,7 +10,7 @@
   <ul>
     {% for post in latest_posts_list %}
       <li>
-        <a href="{% url 'posts:detail' post.slug_title %}">
+        <a href="{% url 'pages:post_detail' post.slug_title %}">
           {{ post.display_title }}
         </a>
       </li>
