pages: Add layouts and static.

--- a/server/pages/static/pages/styles.css
+++ b/server/pages/static/pages/styles.css
@@ -18,3 +18,11 @@ body {
   background-color: var(--color-graphite);
   color: var(--color-chalk);
 }
+
+a:link, a:visited {
+  color: #aaf;
+}
+
+a:hover {
+  color: #ffa;
+}
