--- a/server/pages/templates/pages/articles/index.html
+++ b/server/pages/templates/pages/articles/index.html
@@ -1,21 +1,25 @@
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'articles/styles.css' %}">
-<script type="text/javascript" src="{% static 'articles/script.js' %}"></script>
+{% extends 'pages/layouts/default.html' %}
 
-<pre style="display: none;">
-  {% filter force_escape %} {% debug %} {% endfilter %}
-</pre>
+{% block page_title %}
+  Articles
+{% endblock %}
 
-{% if latest_articles_list %}
-  <ul>
-    {% for article in latest_articles_list %}
-      <li>
-        <a href="{% url 'pages:article_detail' article.slug_title %}">
-          {{ article.display_title }}
-        </a>
-      </li>
-    {% endfor %}
-  </ul>
-{% else %}
-  <p>No articles available.</p>
-{% endif %}
+{% block content %}
+  <pre style="display: none;">
+    {% filter force_escape %} {% debug %} {% endfilter %}
+  </pre>
+
+  {% if latest_articles_list %}
+    <ul>
+      {% for article in latest_articles_list %}
+        <li>
+          <a href="{% url 'pages:article_detail' article.slug_title %}">
+            {{ article.display_title }}
+          </a>
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p>No articles available.</p>
+  {% endif %}
+{% endblock %}
