--- a/server/pages/templates/pages/index.html
+++ b/server/pages/templates/pages/index.html
@@ -1,2 +1,8 @@
-<div>This is the index page.</div>
-<a href="{% url 'pages:articles' %}">Articles</a>
+{% extends 'pages/layouts/default.html' %}
+
+{% block page_title %}Hello World!{% endblock %}
+
+{% block content %}
+  <div>This is the index page.</div>
+  <a href="{% url 'pages:articles' %}">Articles</a>
+{% endblock %}
