front-end: Add webpack, typescript, and sass support.

--- a/server/pages/templates/pages/layouts/default.html
+++ b/server/pages/templates/pages/layouts/default.html
@@ -10,7 +10,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="{% static 'pages/styles.css' %}"
+      href="{% static 'pages/pages.bundle.css' %}"
     >
   </head>
   <body>
@@ -26,7 +26,7 @@
     </footer>
     <script
       type="text/javascript"
-      src="{% static 'pages/script.js' %}"
+      src="{% static 'pages/pages.bundle.js' %}"
     ></script>
   </body>
 </html>
