--- a/client/src/pages/pages.scss
+++ b/client/src/pages/pages.scss
@@ -1,12 +1,37 @@
+@import './partials/reset';
+@import './partials/colors';
+
 *, *::before, *::after {
   box-sizing: border-box;
 }
 
-html, body {
-  font-size: 100%;
+html {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  color: #fff;
-  background-color: #333;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  font-family: sans-serif;
+  color: var(--color-graphite);
+  background-color: var(--color-chalk);
+}
+
+.page {
+  display: grid;
+  grid-template-rows: min-content auto min-content;
+  justify-items: stretch;
+  height: auto;
+  min-height: 100vh;
+}
+
+@import './themes/default';
+@import './themes/dark';
+@import './themes/light';
+
+@import './header/header';
+@import './content/content';
+@import './footer/footer';
