--- a/server/pages/templates/pages/layouts/partials/_header.html
+++ b/server/pages/templates/pages/layouts/partials/_header.html
@@ -14,6 +14,11 @@
           Articles
         </a>
       </li>
+      <li class="header__nav-list-item">
+        <a class="header__nav-link" href="{% url 'pages:settings' %}">
+          Settings
+        </a>
+      </li>
     </ul>
   </nav>
 </header>
