layouts: Define page and article layout templates.

--- a/client/src/pages/partials/_content.scss
+++ b/client/src/pages/partials/_content.scss
@@ -1,4 +1,8 @@
 .content {
   background-color: var(--content__background-color, white);
   color: var(--content__color, black);
+
+  &__padder {
+    padding: 3rem;
+  }
 }
