--- a/server/pages/templates/pages/layouts/partials/_header.html
+++ b/server/pages/templates/pages/layouts/partials/_header.html
@@ -1,6 +1,11 @@
 <header class="header">
   <div class="header__logo">
-    Jon Richards
+    <a
+      class="header__logo-link"
+      href="{% url 'pages:index' %}"
+    >
+      Jon Richards
+    </a>
   </div>
   <nav class="header__nav">
     <ul class="header__nav-list">
