--- a/server/pages/templates/pages/settings/index.html
+++ b/server/pages/templates/pages/settings/index.html
@@ -1,7 +1,7 @@
-{% extends 'pages/layouts/default.html' %}
+{% extends 'pages/layouts/page.html' %}
 
 {% block page_title %}Settings{% endblock %}
 
-{% block content %}
+{% block page_content %}
   <div>This is the settings page.</div>
 {% endblock %}
