--- a/client/src/pages/partials/_header.scss
+++ b/client/src/pages/partials/_header.scss
@@ -14,13 +14,22 @@
 
   &__logo {
     padding: 1.5rem 1rem;
-    font-size: 1.5rem;
-    color: var(--header__logo-color, black);
-
     @include breakpoint-640 {
       padding: 0;
     }
   }
+
+  &__logo-link,
+  &__logo-link:visited {
+    font-size: 1.5rem;
+    color: var(--header__logo-color, black);
+    text-decoration: none;
+  }
+  &__logo-link:focus,
+  &__logo-link:hover {
+    text-decoration: underline;
+  }
+
 
   &__nav-list {
     display: flex;
