--- a/server/pages/templates/pages/articles/index.html
+++ b/server/pages/templates/pages/articles/index.html
@@ -1,10 +1,10 @@
-{% extends 'pages/layouts/default.html' %}
+{% extends 'pages/layouts/page.html' %}
 
 {% block page_title %}
   Articles
 {% endblock %}
 
-{% block content %}
+{% block page_content %}
   <pre style="display: none;">
     {% filter force_escape %} {% debug %} {% endfilter %}
   </pre>
