--- a/server/pages/templates/pages/layouts/base.html
+++ b/server/pages/templates/pages/layouts/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-      {% block page_title %}
+      {% block base_page_title %}
       {% endblock %}
     </title>
     <link
@@ -18,10 +18,8 @@
     <div class="page">
       {% include 'pages/layouts/partials/_header.html' %}
       <main class="content">
-        <my-element></my-element>
         {% include 'pages/layouts/partials/_noscript_disclaimer.html' %}
-        {% block content %}{% endblock %}
-        {% lorem 2 %}
+        {% block base_content %}{% endblock %}
       </main>
       <footer class="footer">
         I am the footer.
