--- a/client/src/pages/themes/_light.scss
+++ b/client/src/pages/themes/_light.scss
@@ -1,15 +1,23 @@
 body.theme--light {
   --header__background-color: var(--color-grey-90);
   --header__color: var(--color-grey-20);
-  --header__border-bottom-color: var(--color-grey-80);
+  --header__border-bottom-color: none;
   --header__logo-color: var(--color-red-50);
   --header__nav-link-font-weight: bold;
   --header__nav-link-color: var(--color-red-60);
   --header__nav-link-hover-color: var(--color-red-70);
+  --header__box-shadow-color: var(--color-grey-70);
 
   --content__background-color: var(--color-grey-90);
   --content__color: var(--color-grey-20);
   
   --footer__background-color: var(--color-grey-90);
   --footer__color: var(--color-grey-20);
+
+  jr-panel {
+    --panel__padding: 1rem;
+    --panel__background-color: var(white);
+    --panel__border: thin solid var(--color-grey-90);
+    --panel__box-shadow: 0 0.1rem 0.25rem var(--color-grey-10--alpha-25);
+  }
 }
