--- a/server/pages/templates/pages/settings/index.html
+++ b/server/pages/templates/pages/settings/index.html
@@ -3,5 +3,9 @@
 {% block page_title %}Settings{% endblock %}
 
 {% block page_content %}
-  <div>This is the settings page.</div>
+  <div class="page-settings-index">
+    <jr-panel class="page-settings-index__panel">
+      I am a panel!
+    </jr-panel>
+  </div>
 {% endblock %}
