--- a/client/src/pages/pages.scss
+++ b/client/src/pages/pages.scss
@@ -35,3 +35,5 @@ body {
 @import './partials/header';
 @import './partials/content';
 @import './partials/footer';
+
+@import './settings/index.scss';
