stylelint: Ignore bundle files.

--- a/server/pages/templates/pages/settings/index.html
+++ b/server/pages/templates/pages/settings/index.html
@@ -4,21 +4,40 @@
 
 {% block page_content %}
   <div id="pages-settings-index">
+    <section id="cookies" class="pages-settings-index__section">
+      <jr-panel class="pages-settings-index__panel">
+        Cookies
+        <p>
+          Cookies are used for the following tasks:
+        </p>
+        <ul>
+          <li>
+            Saving settings.  This allows the site to automatically use your
+            preferred settings the next time you visit.
+          </li>
+          <li>
+            Analytics, sepcifically page bounce rates and number of unique users
+            per day.
+          </li>
+        </ul>
+      </jr-panel>
+    </section>
+    
     <section id="theme" class="pages-settings-index__section">
       <jr-panel class="pages-settings-index__panel">
         Theme
       </jr-panel>
     </section>
 
-    <section id="cookies" class="pages-settings-index__section">
-      <jr-panel class="pages-settings-index__panel">
-        Cookies
-      </jr-panel>
-    </section>
-
     <section id="motion" class="pages-settings-index__section">
       <jr-panel class="pages-settings-index__panel">
         Motion
+      </jr-panel>
+    </section>
+
+    <section id="data" class="pages-settings-index__section">
+      <jr-panel class="pages-settings-index__panel">
+        Data
       </jr-panel>
     </section>
   </div>
