--- a/client/src/pages/settings/index.scss
+++ b/client/src/pages/settings/index.scss
@@ -3,7 +3,13 @@
   
   .#{$namespace}__section {
     display: block;
-    padding-bottom: 2rem;
+    margin: 0 auto 2rem;
+    max-width: 50rem;
+    width: auto;
+
+    &:last-of-type {
+      margin-bottom: 0rem;
+    }
   }
 
   .#{$namespace}__panel {
