--- a/server/pages/templates/pages/pages/articles/detail.html
+++ b/server/pages/templates/pages/pages/articles/detail.html
@@ -1,6 +1,6 @@
 {% extends 'pages/layouts/article.html' %}
 
-{% block article_title %}
+{% block title %}
   {{article.display_title}}
 {% endblock %}
 
