--- a/client/src/layouts/partials/header.scss
+++ b/client/src/layouts/partials/header.scss
@@ -1,17 +1,22 @@
-@import '../utils/breakpoints';
+@import '../../utils/breakpoints';
 
-.header {
-  display: grid;
-  grid-template-areas: 'logo' 'nav';
+#header {
   border-bottom: thin solid var(--header__border-bottom-color, black);
   background-color: var(--header__background-color, white);
-  color: var(--header__color, black);
   box-shadow: 0 0 0.5rem var(--header__box-shadow-color);
-  z-index: 99;
   
-  @include breakpoint-640 {
-    padding: 2rem;
-    grid-template-areas: 'logo nav';
+  &__content {
+    display: grid;
+    grid-template-areas: 'logo' 'nav';
+    width: 100%;
+    margin: 0 auto;
+    color: var(--header__color, black);
+  
+    @include breakpoint-640 {
+      max-width: 94rem;
+      padding: 2rem;
+      grid-template-areas: 'logo nav';
+    }
   }
 
   &__logo {
@@ -32,7 +37,6 @@
     text-decoration: underline;
   }
 
-
   &__nav-list {
     display: flex;
     flex-direction: column;
@@ -46,7 +50,7 @@
     }
   }
 
-  &__nav-list-item {
+  .header__nav-list-item {
     display: block;
     padding: 1rem;
     border-top: thin solid var(--color-grey-80, black);
@@ -59,21 +63,21 @@
       margin-right: 1rem;
     }
   }
-  &__nav-list-item:last-of-type {
+  .header__nav-list-item:last-of-type {
     margin-right: 0rem;
     border: none;
   }
 
-  &__nav-link,
-  &__nav-link:visited {
+  .header__nav-link,
+  .header__nav-link:visited {
     font-size: 1rem;
     line-height: 1rem;
     font-weight: var(--header__nav-link-font-weight, regular);
     text-decoration: none;
     color: var(--header__nav-link-color, blue);
   }
-  &__nav-link:hover,
-  &__nav-link:focus {
+  .header__nav-link:hover,
+  .header__nav-link:focus {
     text-decoration: underline;
     color: var(--header__nav-link-hover-color, blue);
   }
