--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -4,6 +4,8 @@
 
 {% block page_content %}
   <div id="pages-style-guide-index">
-    Hello world!
+    <jr-panel>
+      <h1>Style Guide</h1>
+    </jr-panel>
   </div>
 {% endblock %}
