--- a/server/pages/templates/pages/layouts/full-bleed.html
+++ b/server/pages/templates/pages/layouts/full-bleed.html
@@ -1,9 +1,9 @@
 {% extends 'pages/layouts/base.html' %}
 
 {% block content %}
-  <div id="article-layout">
+  <div id="full-bleed-layout">
     <main id="main-area">
-      {% block article_content %}
+      {% block full_bleed_content %}
       {% endblock %}
     </main>
   </div>
