--- a/server/pages/templates/pages/layouts/partials/_footer.html
+++ b/server/pages/templates/pages/layouts/partials/_footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
   <div id="footer__content">
-    I am the footer.
+    <a href="{% url 'pages:style-guide' %}">Style Guide</a>
   </div>
 </footer>
