--- a/server/pages/templates/pages/pages/articles/detail.html
+++ b/server/pages/templates/pages/pages/articles/detail.html
@@ -1,10 +1,10 @@
-{% extends 'pages/layouts/article.html' %}
+{% extends 'pages/layouts/full-bleed.html' %}
 
 {% block title %}
   {{article.display_title}}
 {% endblock %}
 
-{% block article_content %}
+{% block full_bleed_content %}
   <h1>{{ article.display_title }}</h1>
 
   <div>
