--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -1,11 +1,15 @@
-{% extends 'pages/layouts/page.html' %}
+{% extends 'pages/layouts/two_by_one.html' %}
 
 {% block page_title %}Style Guide{% endblock %}
 
-{% block page_content %}
+{% block two_content %}
   <div id="pages-style-guide-index">
     <jr-panel>
       <h1>Style Guide</h1>
     </jr-panel>
   </div>
+{% endblock %}
+
+{% block one_content %}
+  <div>After</div>
 {% endblock %}
