--- a/client/src/utils/dimensions.scss
+++ b/client/src/utils/dimensions.scss
@@ -1,21 +1,31 @@
+@use './breakpoints.scss';
+
 /**
- * Calculates the margin for a block based on a provided multiplier and returns
- * the resulting value in rems.
- * @param {number} $multiplier - A number by which to multiply, defaults to 1.
- * @returns {string} The resulting value in rems.
+ * Defines the overall structure for a layout, e.g. max width and padding at
+ * various breakpoints.
  */
-@function block-margin-multiplier($multiplier: 1) {
-  $base-value: 2;
-  @return #{$multiplier * $base-value}rem;
+@mixin structured-layout() {
+  margin: 0 auto;
+  max-width: 60rem;
+  padding: 1rem;
+  width: auto;
+
+  @include breakpoints.breakpoint-1280 {
+    max-width: 90rem;
+    padding: 2rem;
+  }
 }
 
 /**
- * Calculates the padding for a block based on a provided multiplier and returns
- * the resulting value in rems.
- * @param {number} $multiplier - A number by which to multiply, defaults to 1.
- * @returns {string} The resulting value in rems.
+ * Defines a standardized gap value for areas at various breakpoints.
  */
-@function block-padding-multiplier($multiplier: 1) {
-  $base-value: 1;
-  @return #{$multiplier * $base-value}rem;
+@mixin area-gap {
+  gap: 1rem;
+
+  @include breakpoints.breakpoint-1280 {
+    gap: 2rem;
+  }
 }
+
+/** Standard platform padding values. */
+$platform-padding: 2rem;
