--- a/server/pages/templates/pages/pages/index/index.html
+++ b/server/pages/templates/pages/pages/index/index.html
@@ -1,8 +1,8 @@
-{% extends 'pages/layouts/page.html' %}
+{% extends 'pages/layouts/single_column.html' %}
 
 {% block page_title %}Hello World!{% endblock %}
 
-{% block page_content %}
+{% block single_column_content %}
   <div id="pages-index">
     <div>This is the index page.</div>
     <a href="{% url 'pages:articles' %}">Articles</a>
