layouts: Rename single-column to generic, remove unnecessary layout variants.

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -41,8 +41,7 @@ body {
 @import './themes/light.scss';
 
 @import './layouts/base.scss';
-@import './layouts/single-column.scss';
-@import './layouts/two_by_one.scss';
+@import './layouts/generic.scss';
 @import './layouts/partials/header.scss';
 @import './layouts/partials/content.scss';
 @import './layouts/partials/footer.scss';
