--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -1,15 +1,11 @@
-{% extends 'pages/layouts/two_by_one.html' %}
+{% extends 'pages/layouts/generic.html' %}
 
 {% block page_title %}Style Guide{% endblock %}
 
-{% block two_content %}
-  <div id="pages-style-guide-index">
+{% block generic_content %}
+  <main id="pages-style-guide-index">
     <jr-panel>
       <h1>Style Guide</h1>
     </jr-panel>
-  </div>
-{% endblock %}
-
-{% block one_content %}
-  <div>After</div>
+  </main>
 {% endblock %}
