heading-component: Start Heading component.

--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -5,7 +5,7 @@
 {% block generic_content %}
   <main id="pages-style-guide-index">
     <jr-panel>
-      <h1>Style Guide</h1>
+      <jr-heading level="1">Style Guide</jr-heading>
     </jr-panel>
   </main>
 {% endblock %}
