tsconfig: Enable ESModule resolution.

--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -1,11 +1,11 @@
 {% extends 'pages/layouts/generic.html' %}
 
-{% block page_title %}Style Guide{% endblock %}
+{% block title %}Style Guide{% endblock %}
 
 {% block generic_content %}
   <main id="pages-style-guide-index">
     <jr-panel>
-      <jr-heading level="1">Style Guide</jr-heading>
+      <jr-heading level="3" slug="style-guide">Style Guide</jr-heading>
     </jr-panel>
   </main>
 {% endblock %}
