heading-component: Finalize styles.

--- a/server/pages/templates/pages/pages/style_guide/index.html
+++ b/server/pages/templates/pages/pages/style_guide/index.html
@@ -5,7 +5,19 @@
 {% block generic_content %}
   <main id="pages-style-guide-index">
     <jr-panel>
-      <jr-heading level="3" slug="style-guide">Style Guide</jr-heading>
+      <jr-heading level="1">
+        Heading Level 1
+      </jr-heading>
+      <jr-heading level="1" slug="heading-lvl-2-with-slug">
+        Heading Level 1 - With Slug
+      </jr-heading>
+
+      <jr-heading level="2">
+        Heading Level 2
+      </jr-heading>
+      <jr-heading level="2" slug="heading-lvl-3-with-slug">
+        Heading Level 2 - With Slug
+      </jr-heading>
     </jr-panel>
   </main>
 {% endblock %}
